# counterstrikesource-server

./: .gitignore  BUILD  BUILD.bazel  Dockerfile  MODULE.bazel  README.md  WORKSPACE  admins_simple.ini  entrypoint.sh  metamod.vdf  metamod_x64.vdf  motd.txt  repos.bzl  rtv.cfg  server.cfg
.github/workflows/: docker-publish.yml  publish.yml
